crates/treebank-sdf3/spike/cppish/test/corpus/cppish.txt
================================================================================
CARRY: a < b > c; is a declaration, because {prefer} on the template reading wins the tie
================================================================================

a < b > c;

--------------------------------------------------------------------------------

(program
  (decl
    type: (template_id
      name: (id)
      arguments: (id))
    name: (id)))

================================================================================
spacing is irrelevant to the same decision
================================================================================

a<b> c;

--------------------------------------------------------------------------------

(program
  (decl
    type: (template_id
      name: (id)
      arguments: (id))
    name: (id)))

================================================================================
with no trailing name only the comparison completes
================================================================================

a < b;

--------------------------------------------------------------------------------

(program
  (expr_stmt
    (lt
      left: (id)
      right: (id))))

================================================================================
where no declaration is possible the parser never forks: validity decides
================================================================================

x = a < b > c;

--------------------------------------------------------------------------------

(program
  (assign
    target: (id)
    value: (gt
      left: (lt
        left: (id)
        right: (id))
      right: (id))))

================================================================================
the template reading dies when the statement keeps going
================================================================================

a < b > c > d;

--------------------------------------------------------------------------------

(program
  (expr_stmt
    (gt
      left: (gt
        left: (lt
          left: (id)
          right: (id))
        right: (id))
      right: (id))))

================================================================================
>> closes two templates: the lexer only offers tokens the state accepts
================================================================================

vector<vector<int>> v;
a >> b;

--------------------------------------------------------------------------------

(program
  (decl
    type: (template_id
      name: (id)
      arguments: (template_id
        name: (id)
        arguments: (int_type)))
    name: (id))
  (expr_stmt
    (shr
      left: (id)
      right: (id))))

================================================================================
cish's own statements, through the import
================================================================================

int x;
char c;
x = f(a, 1) + 2;
g();

--------------------------------------------------------------------------------

(program
  (decl
    type: (int_type)
    name: (id))
  (decl
    type: (char_type)
    name: (id))
  (assign
    target: (id)
    value: (add
      left: (call
        function: (id)
        arguments: (id)
        arguments: (exp_num (num)))
      right: (exp_num (num))))
  (expr_stmt
    (call function: (id))))

================================================================================
a keyword from the imported module cannot be a name
:error
================================================================================

int int;

--------------------------------------------------------------------------------
